--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ opencv-python==4.12.0.88
 accelerate==1.11.0
 imageio==2.34.0
 imageio-ffmpeg==0.5.1
+ftfy==6.3.1
+dashscope==1.25.0
+requests==2.32.5
