--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ app/model/*.whl
 .env.local
 .env.*.local
 
+# Docker Compose 覆盖配置（本地开发用，不提交到仓库）
+docker/docker-compose.override.yml
+
 # IDE
 .vscode/
 .idea/
